// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-icon-button > Renders defaults 1`] = `
"<button
  aria-label="Menu"
  class="icon-btn"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 5h18a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2Zm18 6H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2ZM3 19h18a1 1 0 0 1 0 2H3a1 1 0 0 1 0-2Z"
      />
    </symbol>
    <use
      href="#icon-menu-24"
    />
  </svg>
</button>"
`;

exports[`evo-icon-button > renders badged icon variant 1`] = `
"<button
  aria-label="Menu"
  arialabel="Badged button"
  badgearialabel="5 Items"
  badgenumber="5"
  class="icon-btn"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 5h18a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2Zm18 6H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2ZM3 19h18a1 1 0 0 1 0 2H3a1 1 0 0 1 0-2Z"
      />
    </symbol>
    <use
      href="#icon-menu-24"
    />
  </svg>
</button>"
`;

exports[`evo-icon-button > renders button with priority=delete 1`] = `
"<button
  aria-label="Menu"
  class="icon-btn"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 5h18a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2Zm18 6H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2ZM3 19h18a1 1 0 0 1 0 2H3a1 1 0 0 1 0-2Z"
      />
    </symbol>
    <use
      href="#icon-menu-24"
    />
  </svg>
</button>"
`;

exports[`evo-icon-button > renders button with priority=primary 1`] = `
"<button
  aria-label="Menu"
  class="icon-btn icon-btn--primary"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 5h18a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2Zm18 6H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2ZM3 19h18a1 1 0 0 1 0 2H3a1 1 0 0 1 0-2Z"
      />
    </symbol>
    <use
      href="#icon-menu-24"
    />
  </svg>
</button>"
`;

exports[`evo-icon-button > renders button with priority=secondary 1`] = `
"<button
  aria-label="Menu"
  class="icon-btn icon-btn--secondary"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 5h18a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2Zm18 6H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2ZM3 19h18a1 1 0 0 1 0 2H3a1 1 0 0 1 0-2Z"
      />
    </symbol>
    <use
      href="#icon-menu-24"
    />
  </svg>
</button>"
`;

exports[`evo-icon-button > renders button with size=large 1`] = `
"<button
  aria-label="Menu"
  class="icon-btn icon-btn--large"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 5h18a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2Zm18 6H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2ZM3 19h18a1 1 0 0 1 0 2H3a1 1 0 0 1 0-2Z"
      />
    </symbol>
    <use
      href="#icon-menu-24"
    />
  </svg>
</button>"
`;

exports[`evo-icon-button > renders button with size=small 1`] = `
"<button
  aria-label="Menu"
  class="icon-btn icon-btn--small"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 5h18a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2Zm18 6H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2ZM3 19h18a1 1 0 0 1 0 2H3a1 1 0 0 1 0-2Z"
      />
    </symbol>
    <use
      href="#icon-menu-24"
    />
  </svg>
</button>"
`;

exports[`evo-icon-button > renders disabled version 1`] = `
"<button
  aria-label="Menu"
  class="icon-btn"
  disabled=""
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 5h18a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2Zm18 6H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2ZM3 19h18a1 1 0 0 1 0 2H3a1 1 0 0 1 0-2Z"
      />
    </symbol>
    <use
      href="#icon-menu-24"
    />
  </svg>
</button>"
`;

exports[`evo-icon-button > renders fake version 1`] = `
"<a
  aria-label="Menu"
  arialabel="fake button"
  class="icon-link"
  href="#"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 5h18a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2Zm18 6H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2ZM3 19h18a1 1 0 0 1 0 2H3a1 1 0 0 1 0-2Z"
      />
    </symbol>
    <use
      href="#icon-menu-24"
    />
  </svg>
</a>"
`;

exports[`evo-icon-button > renders icon 1`] = `
"<button
  aria-label="Menu"
  arialabel="icon button"
  class="icon-btn"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 5h18a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2Zm18 6H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2ZM3 19h18a1 1 0 0 1 0 2H3a1 1 0 0 1 0-2Z"
      />
    </symbol>
    <use
      href="#icon-menu-24"
    />
  </svg>
</button>"
`;

exports[`evo-icon-button > renders partially disabled version 1`] = `
"<button
  aria-disabled="true"
  aria-label="Menu"
  class="icon-btn"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--24"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 5h18a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2Zm18 6H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2ZM3 19h18a1 1 0 0 1 0 2H3a1 1 0 0 1 0-2Z"
      />
    </symbol>
    <use
      href="#icon-menu-24"
    />
  </svg>
</button>"
`;
